--- a/pom.xml
+++ b/pom.xml
@@ -10,11 +10,13 @@
 	</parent>
 	<groupId>in.soshealth</groupId>
 	<artifactId>price-management</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>1.0.0</version>
 	<name>price-management</name>
 	<description>Price Management Module</description>
 	<properties>
-		<java.version>17</java.version>
+		<java.version>11</java.version>
+		<springfox-swagger.version>2.6.1</springfox-swagger.version>
+		<client.base.package.name>in.soshealth.pricemanagement.ms</client.base.package.name>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -25,7 +27,10 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-webflux</artifactId>
 		</dependency>
-
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-web</artifactId>
+		</dependency>
 		<dependency>
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
@@ -41,6 +46,50 @@
 			<artifactId>reactor-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>com.squareup.okhttp</groupId>
+			<artifactId>okhttp</artifactId>
+			<version>2.7.5</version>
+		</dependency>
+
+		<!-- https://mvnrepository.com/artifact/io.swagger/swagger-annotations -->
+		<dependency>
+			<groupId>io.swagger</groupId>
+			<artifactId>swagger-annotations</artifactId>
+			<version>1.6.2</version>
+		</dependency>
+
+		<!-- https://mvnrepository.com/artifact/com.squareup.okhttp/logging-interceptor -->
+		<dependency>
+			<groupId>com.squareup.okhttp</groupId>
+			<artifactId>logging-interceptor</artifactId>
+			<version>2.7.5</version>
+		</dependency>
+
+		<!-- https://mvnrepository.com/artifact/io.gsonfire/gson-fire -->
+		<dependency>
+			<groupId>io.gsonfire</groupId>
+			<artifactId>gson-fire</artifactId>
+			<version>1.8.3</version>
+		</dependency>
+		<!-- Gson Annotation -->
+		<dependency>
+			<groupId>com.google.code.gson</groupId>
+			<artifactId>gson</artifactId>
+			<version>2.8.5</version>
+		</dependency>
+		<!-- https://mvnrepository.com/artifact/javax.inject/javax.inject -->
+		<dependency>
+			<groupId>javax.inject</groupId>
+			<artifactId>javax.inject</artifactId>
+			<version>1</version>
+		</dependency>
+
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>4.13.1</version>
+		</dependency>
 	</dependencies>
 
 	<build>
@@ -55,6 +104,47 @@
 							<artifactId>lombok</artifactId>
 						</exclude>
 					</excludes>
+				</configuration>
+			</plugin>
+			<!--  Swagger Plugins -->
+			<plugin>
+				<!-- Using swagger OpenAPI 2.0-->
+				<groupId>io.swagger</groupId>
+				<artifactId>swagger-codegen-maven-plugin</artifactId>
+				<version>2.4.10</version>
+				<executions>
+					<execution>
+						<id>Service-Provider-Data-Management</id>
+						<goals>
+							<goal>generate</goal>
+						</goals>
+						<configuration>
+							<inputSpec>
+								https://raw.githubusercontent.com/CrossDimension-LLP/sosh-swagger-contracts/main/sosh-price-management.yaml
+							</inputSpec>
+							<!--							<output>target/classes</output>-->
+							<language>java</language>
+							<modelPackage>${client.base.package.name}.ck.resource.pbm.model</modelPackage>
+							<apiPackage>${client.base.package.name}.ck.resource.pbm.api</apiPackage>
+							<invokerPackage>${client.base.package.name}.ck.resource.pbm.invoker</invokerPackage>
+							<configOptions>
+								<dateLibrary>java8</dateLibrary>
+								<groupId>${project.groupId}</groupId>
+								<artifactId>${project.artifactId}</artifactId>
+								<artifactVersion>${project.version}</artifactVersion>
+								<licenseName>Apache 2.0</licenseName>
+								<licenseUrl>https://www.apache.org/licenses/LICENSE-2.0</licenseUrl>
+							</configOptions>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<configuration>
+					<source>${java.version}</source>
+					<target>${java.version}</target>
 				</configuration>
 			</plugin>
 		</plugins>
